		Added a display of the faction logos when the shellmap is disabled.
		Viceroids now heal on and move faster on Tiberium.
		Implemented the original shroud artwork.
		Fixed helicopters falling down not revealing shroud.
		Fixed effect (explosions, etc) saturation when the ingame menu is activated.
		Added shadow to crate artwork.
	Dune 2000:
		Added buildable concrete walls.
		Fixed some cliffs being passable.
		Fixed infantry sometimes using the wrong animation when standing.
		Fixed A* debug overlay.
		Fixed R8 offsets for sprites with embedded palettes.
		Implemented proper spice rendering.
		Implemented the original shroud artwork.
	Engine:
		Replays are now saved in per-mod and per-version folders.
		Added password protection support for servers.
		Added language translation support.
		Added game ID and version information to exception and sync reports.
		Map folders are now explicitly specified in mod.yaml.
		Most UI widgets are now customizable in terms of font type, color, contrast and had their global defaults moved from code to metrics.yaml.
		Replaced the OS X binary launcher with a script to use a new SDL2 renderer.
		Improved cash tick sound playback.
		Added modifier support to hotkeys.
		Fixed a desync related to projectile contrails.
		Fixed corrupted replays (which would immediately desync).
		Removed runtime mod merging.
		Added support for map scripting with Lua.
		Overhauled sprite loading code.
		Improved error message when loading corrupted sprites.
		Rewritten shp(ts) parser makes more efficient use of texture space.
		Added support for the dune 2 shp and pak formats.
		Map format 6 requires the RequiresMod to be defined.
		Added a multiplicitive blend mode.
	Build system and packages:
		Added GeoIP to Makefile so it is installed properly.
		Added desktop shortcut creation support to the Makefile and Windows installer.
		COPYING and CHANGELOG are now shipped on all platforms.